--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,7 @@ services:
     build: ./akka-worker
     ports:
       - "80:8080"
+  frontend:
+    build: ./frontend
+    ports:
+      - "81:4200"
